--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -505,15 +505,15 @@
         <picture>
           <source
             srcset="
-              ./images/reviews/pagination_1.webp 1x,
-              ./images/reviews/pagination_1.webp 1x
+              ./images/reviews/pagination_1.webp    1x,
+              ./images/reviews/pagination_1@2x.webp 2x
             "
             type="image/webp"
           />
           <source
             srcset="
-              ./images/reviews/pagination_1.jpg 1x,
-              ./images/reviews/pagination_1.jpg 1x
+              ./images/reviews/pagination_1.jpg    1x,
+              ./images/reviews/pagination_1@2x.jpg 2x
             "
           />
           <img src="./images/reviews/pagination_1.jpg" alt="" loading="lazy" />
@@ -523,15 +523,15 @@
         <picture>
           <source
             srcset="
-              ./images/reviews/pagination_2.webp 1x,
-              ./images/reviews/pagination_2.webp 1x
+              ./images/reviews/pagination_2.webp    1x,
+              ./images/reviews/pagination_2@2x.webp 2x
             "
             type="image/webp"
           />
           <source
             srcset="
-              ./images/reviews/pagination_2.jpg 1x,
-              ./images/reviews/pagination_2.jpg 1x
+              ./images/reviews/pagination_2.jpg    1x,
+              ./images/reviews/pagination_2@2x.jpg 2x
             "
           />
           <img src="./images/reviews/pagination_2.jpg" alt="" loading="lazy" />
@@ -541,15 +541,15 @@
         <picture>
           <source
             srcset="
-              ./images/reviews/pagination_3.webp 1x,
-              ./images/reviews/pagination_3.webp 1x
+              ./images/reviews/pagination_3.webp    1x,
+              ./images/reviews/pagination_3@2x.webp 2x
             "
             type="image/webp"
           />
           <source
             srcset="
-              ./images/reviews/pagination_3.jpg 1x,
-              ./images/reviews/pagination_3.jpg 1x
+              ./images/reviews/pagination_3.jpg    1x,
+              ./images/reviews/pagination_3@2x.jpg 2x
             "
           />
           <img src="./images/reviews/pagination_3.jpg" alt="" loading="lazy" />
@@ -559,15 +559,15 @@
         <picture>
           <source
             srcset="
-              ./images/reviews/pagination_4.webp 1x,
-              ./images/reviews/pagination_4.webp 1x
+              ./images/reviews/pagination_4.webp    1x,
+              ./images/reviews/pagination_4@2x.webp 2x
             "
             type="image/webp"
           />
           <source
             srcset="
-              ./images/reviews/pagination_4.jpg 1x,
-              ./images/reviews/pagination_4.jpg 1x
+              ./images/reviews/pagination_4.jpg    1x,
+              ./images/reviews/pagination_4@2x.jpg 2x
             "
           />
           <img src="./images/reviews/pagination_4.jpg" alt="" loading="lazy" />
@@ -577,15 +577,15 @@
         <picture>
           <source
             srcset="
-              ./images/reviews/pagination_5.webp 1x,
-              ./images/reviews/pagination_5.webp 1x
+              ./images/reviews/pagination_5.webp    1x,
+              ./images/reviews/pagination_5@2x.webp 2x
             "
             type="image/webp"
           />
           <source
             srcset="
-              ./images/reviews/pagination_5.jpg 1x,
-              ./images/reviews/pagination_5.jpg 1x
+              ./images/reviews/pagination_5.jpg    1x,
+              ./images/reviews/pagination_5@2x.jpg 2x
             "
           />
           <img src="./images/reviews/pagination_5.jpg" alt="" loading="lazy" />
@@ -595,15 +595,15 @@
         <picture>
           <source
             srcset="
-              ./images/reviews/pagination_6.webp 1x,
-              ./images/reviews/pagination_6.webp 1x
+              ./images/reviews/pagination_6.webp    1x,
+              ./images/reviews/pagination_6@2x.webp 2x
             "
             type="image/webp"
           />
           <source
             srcset="
-              ./images/reviews/pagination_6.jpg 1x,
-              ./images/reviews/pagination_6.jpg 1x
+              ./images/reviews/pagination_6.jpg    1x,
+              ./images/reviews/pagination_6@2x.jpg 2x
             "
           />
           <img src="./images/reviews/pagination_6.jpg" alt="" loading="lazy" />
@@ -613,15 +613,15 @@
         <picture>
           <source
             srcset="
-              ./images/reviews/pagination_7.webp 1x,
-              ./images/reviews/pagination_7.webp 1x
+              ./images/reviews/pagination_7.webp    1x,
+              ./images/reviews/pagination_7@2x.webp 2x
             "
             type="image/webp"
           />
           <source
             srcset="
-              ./images/reviews/pagination_7.jpg 1x,
-              ./images/reviews/pagination_7.jpg 1x
+              ./images/reviews/pagination_7.jpg    1x,
+              ./images/reviews/pagination_7@2x.jpg 2x
             "
           />
           <img src="./images/reviews/pagination_7.jpg" alt="" loading="lazy" />
