--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -39,7 +39,11 @@
           <span class="contacts-form-label">Телефон&ast;</span>
         </label>
       </div>
-      <button class="btn contacts-form-btn" type="submit">
+      <button
+        class="btn contacts-form-btn btn_submit disabled"
+        type="submit"
+        id="button"
+      >
         I want a free lesson
       </button>
     </form>
