--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -100,8 +100,11 @@
         text-align: center;
         font-size: 12px;
         line-height: calc(15/12);
-        width: calc(100% - 2 * 10px);
+        width: 260px; 
+        height: 48px;
         margin: 50px 10px 54px;
+        font-weight: 700;
+        display: block;
 
         color: var(--white-color);
         background-color: var(--accent-color);
@@ -109,16 +112,25 @@
 
         border: solid rgba(0, 0, 0, 0);
 
+        &:hover,
+        &:focus {
+            background-color: rgba(255, 107, 9, 0.7)
+        }
 
+        @include mq(mob) {
+                    margin-left: auto;
+                    margin-right: auto;
+            }
 
         @include mq(tab) {
             margin: 45px 446px 124px 0;
             width: 260px;
-
+            height: 48px;
         }
 
         @include mq(desk) {
             width: 354px;
+            height: 70px;
             margin-bottom: 242px;
         }
     }
