--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -18,9 +18,9 @@
                 <img class="hero__img" srcset="
                             ../images/hero/hero-mob1x.png 320w,
                             ../images/hero/hero-tablet1x.png 768w,
-                            ../images/hero/hero-desktop1x.png 1366w" sizes="(min-witdth: 1366px) 1366w, 
-                                        (min-witdth: 768px) 768w, 
-                                        (min-witdth: 320px) 320w, 100vw" src="../images/hero/hero-tablet1x.png"
+                            ../images/hero/hero-desktop1x.png 1366w" sizes="(min-witdth: 1366px) 1842px, 
+                                        (min-witdth: 768px) 370px, 
+                                        (min-witdth: 320px) 208px, 100vw" src="../images/hero/hero-tablet1x.png"
                     alt="hero" />
             </div>
         </div>
