--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,19 +1,18 @@
 <footer class="footer">
-    <div class="">
-        <div class="footer__container">
-            <svg class="footer__logo-svg">
-                <use href="./images/sprite.svg#logo-black"></use>
-            </svg>
-            <div class="footer__container-tel">
+    <div class="container footer__container">
+        <svg class="footer__logo-svg">
+            <use href="./images/sprite.svg#logo-black"></use>
+        </svg>
                 <a href="tel:+380991234567"class="footer__text">
                 <svg class="footer__tel-svg">
-                <use href="./images/sprite.svg#phone"></use>
-                </svg><span class="number-tel">+38 (099) 123 45 67</span></a>
-                <a href="" class="footer__link"><img class="footer__insta-pic" src="./images/instagram-webp.webp"/></a> 
-            </div>
-        </div>
-        <div class="footer__down">
-            <h2 class="footer__title-down">&copy; All rights reserved, 2022</h2>
-        </div>
+            <use href="./images/sprite.svg#phone"></use>
+            </svg><span class="footer--tel">+38 (099) 123 45 67</span></a>
+        
+        <a href="" class="footer__link"><img alt="instagram" class="footer__insta-pic" src="./images/instagram.png"/></a> 
+    </div>
+    <div class="footer__down">
+        <div class="container">
+        <p class="footer__title-down">&copy; All rights reserved, 2022</p>
+    </div>
     </div>
 </footer>
