--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,18 +1,15 @@
 .footer__container{
-    padding: 24px 61px 30px 60px;
-
-@include mq(tab){
-        padding: 50px 40px 40px;
-        display: flex;
-}
-}
-
-.footer__container-tel{
+    padding-top: 24px;
+    padding-bottom: 30px;
     @include mq(tab){
-         display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }     
+        padding-top: 50px;
+        padding-bottom: 40px;
+        display: flex;
+    }
+    @include mq(desk){
+        padding-top: 52px;
+        padding-bottom: 53px;
+    }
 }
 
 .footer__logo-svg{
@@ -22,31 +19,39 @@
     display: flex;
     margin: 0 auto;
     
-
 @include mq(tab){
         width: 128px;
         height: 46px;
-        margin: 0 216px 0 0;
-        
+        margin:0;
+    }
+
+    @include mq(desk){
+        width:128px; 
+        height:45px;
     }
 }
 
 .footer__text{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     font-weight: 600;
     font-size: 14px;
     line-height: calc(17/14);
     letter-spacing: 0.08em;
     
     color: #111518;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     margin-top: 22px;
 
     @include mq(tab){
         margin-top: 0px;
+        margin-left: auto;
     }
-
+    
+    @include mq(desk){
+        margin-left: 295px;
+    }
 }
 
 .footer__tel-svg{
@@ -60,21 +65,19 @@
         height:24px;
         margin-right: 20px;
     }
-    
+    @include mq(desk){
+        width:30px; 
+        height:30px;
+        margin-right: 30px;
+    } 
 }
 
-.number-tel{
-    width: 169px;
-    height: 17px;
-    
+.footer--tel{
     @include mq(tab){
         font-weight: 600;
         font-size: 20px;
         line-height: calc(24/20);
         letter-spacing: 0.08em;
-
-        // width:161px; 
-        // height:24px;
         margin-right: 40px;
     }
 }
@@ -90,24 +93,17 @@
     }
 }
 
-// .footer__insta-pic{
-  
-// }
-
 .footer__down{
     height: 68px;
-    margin-top: 30px;
     padding: 20px 0;
     background-color: black;
 
 @include mq(tab){
     margin-top: 0;
-    padding-left: 40px;
 }
     
 @include mq(desk){
     height:67px;
-    padding-left: 183px;
 }
 }
 .footer__link{
