--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -7,7 +7,7 @@
                     <li class="program-list__title">
                         1 semester
                     </li>
-                    <div class="flex">
+                    <li class="flex">
                         <ul>
                             <li class="program-list__headline">
                                 — Grammar
@@ -30,7 +30,7 @@
                                 People & Society
                             </li>
                         </ul>
-                    </div>
+                    </li>
                 </ul>
             </li>
             <li class="program-list__item">
@@ -38,7 +38,7 @@
                     <li class="program-list__title">
                         2 semester
                     </li>
-                    <div class="flex">
+                    <li class="flex">
                         <ul>
                             <li class="program-list__headline">
                                 — Grammar
@@ -69,7 +69,7 @@
                                 Work
                             </li>
                         </ul>
-                    </div>
+                    </li>
                 </ul>
             </li>
             <li class="program-list__item">
@@ -77,7 +77,7 @@
                     <li class="program-list__title">
                         3 semester
                     </li>
-                    <div class="flex">
+                    <li class="flex">
                         <ul>
                             <li class="program-list__headline">
                                 — Grammar
@@ -117,7 +117,7 @@
                                 Informal Letter
                             </li>
                         </ul>
-                    </div>
+                    </li>
                 </ul>
             </li>
             <li class="program-list__item">
@@ -125,7 +125,7 @@
                     <li class="program-list__title">
                         4 semester
                     </li>
-                    <div class="flex">
+                    <li class="flex">
                         <ul>
                             <li class="program-list__headline">
                                 — Grammar
@@ -168,7 +168,7 @@
                                 Formal Letter
                             </li>
                         </ul>
-                    </div>
+                    </li>
                 </ul>
             </li>
             <li class="program-list__item program-list__border">
@@ -187,19 +187,18 @@
                     </li>
                 </ul>
             </li>
-            <div>
+            <li>
                 <img class="program__img" srcset="
         ./images/program/program-bg.png 768w,
-        ./images/program/program-bg2x.png 1366w" sizes="(min-witdth: 1366px) 1366w, 
-                    (min-witdth: 768px) 768w, 
-                    (min-witdth: 320px) 320w, 100vw" src="./images/program/program-bg.png" alt="hero" />
+        ./images/program/program-bg2x.png 1366w" sizes="(min-witdth: 1366px) 672px, 
+                    (min-witdth: 768px) 374px, 
+                    (min-witdth: 320px) 374px, 100vw" src="./images/program/program-bg.png" alt="hero" />
 
                 <img class="program-mob__img" srcset="
                     ./images/program/program-mob.png 320w,
-                    ./images/program/program-mobx2.png 768w" sizes="(min-witdth: 768px) 768w, 
-                            (min-witdth: 320px) 320w, 100vw" src="./images/program/program-mob.png" alt="hero" />
-
-            </div>
+                    ./images/program/program-mobx2.png 768w" sizes="(min-witdth: 768px) 120px, 
+                            (min-witdth: 320px) 120px, 100vw" src="./images/program/program-mob.png" alt="hero" />
+            </li>
         </ul>
     </div>
 </section>
