add position relative

--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -1,7 +1,7 @@
 <section class="problems section">
   <div class="container">
     <h2 class="problems__title">
-      The&nbsp;main&nbsp;problems of&nbsp;students in&nbsp;English&nbsp;UPE,&nbsp;which we&nbsp;<span class="active">help</span>&nbsp;to&nbsp;solve
+      The&nbsp;main&nbsp;problems of&nbsp;students in&nbsp;English&nbsp;UPE, which we&nbsp;<span class="active">help</span>&nbsp;to&nbsp;solve
     </h2>
     <ul class="problems__list">
       <li class="problems__item">Grammar</li>
