--- a/src/sass/components/_benefits.scss
+++ b/src/sass/components/_benefits.scss
@@ -18,6 +18,9 @@
   color: var(--white-color);
 }
 .profit {
+position:relative;
+z-index: 10;
+
   counter-reset: section;
 
   padding: 35px 22px;
