add id and fix some problems

--- a/src/partials/guarantee.html
+++ b/src/partials/guarantee.html
@@ -1,4 +1,4 @@
-<section class="section guarentee">
+<section class="section guarentee" id="guarentee">
 <div class="container">
     <h2 class="guarantee__title">We guarantee</h2>
     <ul class="guarantee__list">
