--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -1,4 +1,4 @@
-<section class="program section">
+<section class="program section" id="program">
     <div class="container program-container">
         <h2 class="program-title">Our program</h2>
         <ul class="program-list">
