--- a/src/sass/components/_problems.scss
+++ b/src/sass/components/_problems.scss
@@ -23,6 +23,7 @@
 
   padding: 20px 27px;
 
+  box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
   background-color: var(--white-color);
 }
 .problems__item {
