--- a/src/sass/components/_program.scss
+++ b/src/sass/components/_program.scss
@@ -16,8 +16,11 @@
         padding-top: 50px;
         margin-bottom: 30px;
 
-        @include mq(desk) {
+        @include mq(tab) {
             text-align: left;
+        }
+
+        @include mq(desk) {
             font-size: 46px;
             line-height: 1.3;
             margin-bottom: 106px;
