--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -9,38 +9,39 @@
       <span class="active"><br class="br-none" />free lesson</span>. <br />A
       consultant will contact you and answer your questions
     </h3>
-    <form class="contacts-form" name="contact-form">
+    <form class="form contacts-form" name="contact-form">
       <div class="contacts-form-group">
         <label class="contacts-form-field">
           <input
             class="contacts-form-input"
-            name="user-name"
+            name="name"
             type="text"
-            placeholder=" "
-            required
-            pattern="^[a-zA-Z]+\s[a-zA-Z]+$"
-            title="Username must be two words separated by space."
+            minlength="12"
+            placeholder="John Doe"
+            required pattern="^[a-zA-Z]+\s[a-zA-Z]+$"
+            title="Please input name and last name"
           />
           <span class="contacts-form-label">Имя&ast;</span>
         </label>
         <label class="contacts-form-field">
           <input
             class="contacts-form-input"
-            name="user-phone"
+            name="phone"
             type="tel"
-            id="user-phone"
-            placeholder=" "
-            required
-            minlength="10"
-            maxlength="13"
-            pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$"
-            title="Please input number "
+            id="phone"
+            minlength="12"
+            maxlength="12"
+            placeholder="380001234567"
+            required pattern="^[0-9]+$"
+            title="Please input number in the format 380001234567"
           />
           <span class="contacts-form-label">Телефон&ast;</span>
         </label>
       </div>
+<div>
+   
       <button
-        class="btn contacts-form-btn btn_submit disabled"
+        class="contacts-form-btn btn_submit"
         type="submit"
         id="button"
       >
