add id for links

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,16 +8,16 @@
     <nav class="menu nav-scroll">
       <ul class="menu__list">
         <li class="menu__item">
-          <a href="#" class="menu__link">Studying program</a>
+          <a href="#program" class="menu__link">Studying program</a>
         </li>
         <li class="menu__item">
           <a href="#about" class="menu__link active">about</a>
         </li>
         <li class="menu__item">
-          <a href="#" class="menu__link">training options</a>
+          <a href="#guarentee" class="menu__link">training options</a>
         </li>
         <li class="menu__item">
-          <a href="#" class="menu__link">contacts</a>
+          <a href="#contacts" class="menu__link">contacts</a>
         </li>
       </ul>
     </nav>
@@ -55,16 +55,16 @@
         </div>
         <ul class="mobile-menu__list nav-scroll">
           <li class="mobile-menu__item">
-            <a href="#" class="mobile-menu__link">Studying program</a>
+            <a href="#program" class="mobile-menu__link">Studying program</a>
           </li>
           <li class="mobile-menu__item">
             <a href="#about" class="mobile-menu__link">About</a>
           </li>
           <li class="mobile-menu__item">
-            <a href="#" class="mobile-menu__link">Training options</a>
+            <a href="#guarentee" class="mobile-menu__link">Training options</a>
           </li>
           <li class="mobile-menu__item">
-            <a href="#" class="mobile-menu__link">Contacts</a>
+            <a href="#contacts" class="mobile-menu__link">Contacts</a>
           </li>
         </ul>
         <a href="tel:+38000000000" class="mobile-menu__button call-back-btn">
