--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -221,6 +221,7 @@
 .contacts-form-input:focus + .contacts-form-label,
 .contacts-form-input:not(:placeholder-shown) + .contacts-form-label {
   transform: translateY(-31px) translateX(-28px) scale(0.9);
+  transition: transform (--animation);
 
   @include mq(desk) {
     transform: translateY(-48px) translateX(-40px) scale(0.9);
@@ -228,21 +229,25 @@
 }
 
 .contacts-form-input:valid {
-  border-color: green;
+  border-color: #008000;
 }
 
 .contacts-form-input:invalid:focus:not(:placeholder-shown) {
-  border-color: red;
+  border-color: #ff0000;
 }
 
 // базовые стили кнопки переписать
 .contacts-form-btn {
-  display: block;
   margin-right: auto;
   margin-left: auto;
+  padding: 0;
 
   height: 48px;
-  width: 260px;
+  max-width: 260px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   font-family: inherit;
   font-weight: 700;
@@ -256,10 +261,14 @@
   background-color: var(--accent-color);
 
   @include mq(desk) {
-    height: 70px;
-    width: 354px;
+    height: 48px;
+    max-width: 260px;
+  }
 
-    font-family: inherit;
+  @include mq(desk) {
+    height: 70px;
+    min-width: 354px;
+
     font-size: 14px;
     line-height: calc(17 / 14);
     letter-spacing: 0.14em;
@@ -269,10 +278,10 @@
   box-shadow: rgba(255, 107, 9, 0.7);
 }
 
-.contacts-form-input:valid {
-  border-color: green;
-}
+// .contacts-form-input:valid {
+//   border-color: green;
+// }
 
-.contacts-form-input:invalid:focus:not(:placeholder-shown) {
-  border-color: red;
-}
+// .contacts-form-input:invalid:focus:not(:placeholder-shown) {
+//   border-color: red;
+// }
