--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -41,7 +41,7 @@
 <div>
    
       <button
-        class="contacts-form-btn btn_submit"
+        class="contacts-form-btn btn"
         type="submit"
         id="button"
       >
