--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -11,7 +11,7 @@
                 <li class="hero-list__item hero-list__tab">+25 points</li>
                 <li class="hero-list__desk">But you are guaranteed to get +25 points</li>
             </ul>
-            <button class="hero__btn" type="button">
+            <button class="hero__btn btn" type="button">
                 I want a free lesson
             </button>
             <div>
