--- a/src/sass/base/_basic-values.scss
+++ b/src/sass/base/_basic-values.scss
@@ -38,7 +38,7 @@ button {
   width: 260px;
   height: 48px;
   font-weight: 700;
-
+  border: none;
   letter-spacing: 0.08em;
 
   color: var(--white-color);
