--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -94,38 +94,16 @@
     }
 
     &__btn {
-        padding: 14px 1px;
-        text-align: center;
-        font-size: 12px;
-        line-height: calc(15/12);
-        width: 260px; 
-        height: 48px;
-        margin: 50px 10px 54px;
-        font-weight: 700;
-        display: block;
-
-        color: var(--white-color);
-        background-color: var(--accent-color);
-        text-transform: uppercase;
-
-        border: none;
-
-        &:hover,
-        &:focus {
-            background-color: rgba(183, 88, 25, 0.7)
-        }
 
         @include mq(mob) {
-                    margin-left: auto;
-                    margin-right: auto;
+                margin-top: 54px;
+                margin-bottom: 67px;
             }
 
         @include mq(tab) {
             margin-top: 45px;
             margin-bottom: 129px;
             margin-left: 0;
-            width: 260px;
-            height: 48px;
         }
 
         @include mq(desk) {
