--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,7 +1,11 @@
 .hero {
 
     &-position {
-        position: relative;
+        display: flex;
+        @media screen and (max-width: 767px) {
+                display: block;
+            }
+
     }
     @media screen and (max-width: 767px) {
         padding-top: 93px;
@@ -36,9 +40,6 @@
         line-height: 1.3;
         letter-spacing: 0.03em;
 
-
-
-
         @include mq(tab) {
             width: 320px;
         }
@@ -57,11 +58,11 @@
         line-height: calc(22/14);
         align-items: center;
 
-        &__item:nth-child(1) {
+        &__item:nth-child(2) {
             font-weight: 500;
             color: var(--main-text-color);
 
-            @media screen and (min-width: 1680px) {
+            @media screen and (min-width: 1366px) {
                 font-size: 20px;
                 ;
             }
@@ -91,11 +92,16 @@
             }
         }
 
+        &__mob {
+            @media screen and (max-width: 767px) {
+                text-align: center;
+            }
+        }
     }
 
     &__btn {
 
-        @include mq(mob) {
+        @media screen and (max-width: 767px) {
                 margin-top: 54px;
                 margin-bottom: 67px;
             }
@@ -115,7 +121,7 @@
 
     &__img {
 
-        @media screen and (min-width: 200px) {
+        @media screen and (max-width: 767px) {
             width: 208px;
             max-width: none;
             margin: 0 auto;
@@ -123,15 +129,17 @@
 
         @include mq(tab) {
             width: 370px;
-            left: 308px;
-            top: -3px;
-            position: absolute;
+            height: 315px;
+            margin-left: 18px;
+            margin-top: -4px;
+
         }
 
         @include mq(desk) {
             width: 842px;
-            left: 538px;
-            top: -3px;
+            height: 718px;
+            margin-top: -55px;
+            margin-left: 50px;
         }
 
     }
