--- a/src/sass/components/_benefits.scss
+++ b/src/sass/components/_benefits.scss
@@ -25,6 +25,8 @@
 
   padding: 35px 22px;
 
+  box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+
   background-color: var(--white-color);
 }
 .profit__item {
