--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -121,16 +121,16 @@
 }
 
 .contacts-form {
-  width: 280px;
+  max-width: 280px;
   margin-right: auto;
   margin-left: auto;
 
   @include mq(tab) {
-    width: 390px;
+    max-width: 390px;
   }
 
   @include mq(desk) {
-    width: 478px;
+    max-width: 478px;
   }
 }
 
@@ -181,7 +181,7 @@
 }
 
 .contacts-form-input::placeholder {
-  opacity: 1;
+  opacity: 0;
   transition: opacity var(--animation) 50ms;
 }
 
@@ -204,6 +204,7 @@
 
   transition: color var(--animation);
   transform: var(--animation);
+  transform-origin: top left;
 
   @include mq(tab) {
     top: 30%;
@@ -220,32 +221,42 @@
 .contacts-form-input:focus + .contacts-form-label,
 .contacts-form-input:not(:placeholder-shown) + .contacts-form-label {
   transform: translateY(-31px) translateX(-28px) scale(0.9);
+  transition: transform (--animation);
 
   @include mq(desk) {
     transform: translateY(-48px) translateX(-40px) scale(0.9);
+    transition: transform var(--animation);
   }
 }
 
-// базовые стили кнопки переписать
+.contacts-form-input:valid {
+  border: 1px solid #008000;
+  transition: border-color var(--animation);
+}
+
+.contacts-form-input:invalid:focus:not(:placeholder-shown) {
+  border-color: #ff0000;
+  transition: border-color var(--animation);
+}
+
 .contacts-form-btn {
-  display: block;
+  width: 100%;
+  width: 242px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-right: auto;
   margin-left: auto;
 
-  font-family: inherit;  
+  font-family: inherit;
   border: none;
 
-
- 
+  @include mq(mob) {
+    width: 260px;
   }
-<<<<<<< Updated upstream
+
+  @include mq(desk) {
+    width: 354px;
+    height: 70px;
+  }
 }
-<<<<<<< Updated upstream
-.contacts-form-btn::before {
-  box-shadow: rgba(255, 107, 9, 0.7);
-}
-=======
->>>>>>> Stashed changes
-=======
-}
->>>>>>> Stashed changes
