--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -74,7 +74,8 @@
   align-items: center;
 
   font-weight: 700;
-
+  font-size: 12px;
+  line-height: calc(15 / 12);
   text-transform: uppercase;
 
   width: 260px;
@@ -91,8 +92,11 @@
   }
   @include mq(tab) {
     display: flex;
+    font-size: 14px;
+    line-height: calc(17 / 14);
   }
   @include mq(desk) {
+    width: 354px;
     margin-left: 60px;
   }
 }
