add some animation

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header" id="header">
   <div class="container header-container">
-    <a href="#" class="header-logo">
+    <a href="index.html" class="header-logo">
       <svg class="header-logo__icon">
         <use href="./images/sprite.svg#logo-black"></use>
       </svg>
@@ -38,7 +38,7 @@
     <div class="menu-mobile is-hidden" id="menu-mobile" data-mobile-menu-modal>
       <div class="container">
         <div class="menu-mobile__wrapper">
-          <a href="#" class="header-logo">
+          <a href="index.html" class="header-logo">
             <svg class="header-logo__icon">
               <use href="./images/sprite.svg#logo-white"></use>
             </svg>
