--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,31 +1,42 @@
 <section class="hero section">
+  <div class="container hero-container">
+    <div class="hero-position">
+      <ul class="hero-list animate__animated animate__backInDown">
+        <li>
+          <h1 class="hero__title">Complex preparation for English UPE</h1>
+        </li>
+        <li class="hero-list__item">It won’t be easy.</li>
+        <li class="hero-list__item hero-list__tab">
+          But you’re guaranteed to get
+        </li>
+        <li class="hero-list__item hero-list__tab">+25 points</li>
+        <li class="hero-list__desk">
+          But you are guaranteed to get +25 points
+        </li>
+        <li class="hero-list__mob nav-scroll">
+          <a
+            href="#contacts"
+            class="hero__btn btn animate__animated animate__animated animate__backInLeft"
+            type="button"
+          >
+            I want a free lesson
+          </a>
+        </li>
+      </ul>
 
-    <div class="container hero-container">
-        <div class="hero-position">
-
-            <ul class="hero-list">
-                <li>
-                    <h1 class="hero__title">
-                        Complex preparation for English UPE
-                    </h1>
-                </li>
-                <li class="hero-list__item">It won’t be easy.</li>
-                <li class="hero-list__item hero-list__tab">But you’re guaranteed to get</li>
-                <li class="hero-list__item hero-list__tab">+25 points</li>
-                <li class="hero-list__desk">But you are guaranteed to get +25 points</li>
-                <li class="hero-list__mob"><button class="hero__btn btn" type="button">
-                        I want a free lesson
-                    </button></li>
-            </ul>
-
-            <img class="hero__img" srcset="
-                            ../images/hero/hero-mob1x.png 320w,
-                            ../images/hero/hero-tablet1x.png 768w,
-                            ../images/hero/hero-desktop1x.png 1366w" sizes="(min-witdth: 1366px) 1842px, 
+      <img
+        class="hero__img animate__animated animate__fadeInTopRight"
+        srcset="
+          ../images/hero/hero-mob1x.png      320w,
+          ../images/hero/hero-tablet1x.png   768w,
+          ../images/hero/hero-desktop1x.png 1366w
+        "
+        sizes="(min-witdth: 1366px) 1842px, 
                                         (min-witdth: 768px) 370px, 
-                                        (min-witdth: 320px) 208px, 100vw" src="../images/hero/hero-tablet1x.png"
-                alt="hero" />
-
-        </div>
+                                        (min-witdth: 320px) 208px, 100vw"
+        src="../images/hero/hero-tablet1x.png"
+        alt="hero"
+      />
     </div>
+  </div>
 </section>
