--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,7 +1,7 @@
 <section class="advant section">
   <div class="advant__content container">
     <h2 class="advant__title title visually-hidden">Advantages</h2>
-    <ul class="advant__list list">
+    <ul class="advant__list list animate__animated animate__fadeInUp">
       <li class="advant__item advant__item--icon1">
         Adapted author's UPE program
       </li>
