--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,146 +1,138 @@
 .hero {
-
-    &-position {
-        display: flex;
-        @media screen and (max-width: 767px) {
-                display: block;
-            }
-
-    }
+  &-position {
+    display: flex;
     @media screen and (max-width: 767px) {
-        padding-top: 93px;
+      display: block;
     }
+  }
+  @media screen and (max-width: 767px) {
+    padding-top: 93px;
+  }
+
+  @include mq(tab) {
+    padding-top: 158px;
+    background-image: url(../images/hero/wave-tablet.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+
+  @include mq(desk) {
+    background-image: url(../images/hero/wave-desktop.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+
+  &-container {
+    @include mq(tab) {
+      display: flex;
+    }
+  }
+
+  &__title {
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 1.3;
+    letter-spacing: 0.03em;
 
     @include mq(tab) {
-        padding-top: 158px;
-        background-image:
-            url(../images/hero/wave-tablet.png);
-        background-position: center;
-        background-size: contain;
-        background-repeat: no-repeat;
+      width: 320px;
     }
 
     @include mq(desk) {
-        background-image:
-            url(../images/hero/wave-desktop.png);
-        background-position: center;
-        background-size: contain;
-        background-repeat: no-repeat;
+      font-size: 58px;
+      width: 530px;
     }
+  }
 
-    &-container {
-        @include mq(tab) {
-            display: flex;
-        }
-    }
+  &-list {
+    margin-top: 8px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: calc(22 / 14);
+    align-items: center;
 
-    &__title {
-        font-weight: 800;
+    &__item:nth-child(2) {
+      font-weight: 500;
+      color: var(--main-text-color);
+
+      @media screen and (min-width: 1366px) {
         font-size: 20px;
-        line-height: 1.3;
-        letter-spacing: 0.03em;
-
-        @include mq(tab) {
-            width: 320px;
-        }
-
-        @include mq(desk) {
-            font-size: 58px;
-            width: 530px;
-        }
-
+      }
     }
 
-    &-list {
-        margin-top: 8px;
-        font-weight: 700;
-        font-size: 14px;
-        line-height: calc(22/14);
-        align-items: center;
-
-        &__item:nth-child(2) {
-            font-weight: 500;
-            color: var(--main-text-color);
-
-            @media screen and (min-width: 1366px) {
-                font-size: 20px;
-                ;
-            }
-
-        }
-
-        &__item:nth-child(3) {
-            color: var(--accent-color);
-        }
-
-        @media screen and (min-width: 768px) and (max-width: 1679px) {
-            margin-top: 15px;
-        }
-
-        &__desk {
-            @media screen and (max-width: 1366px) {
-                display: none;
-            }
-
-            font-size: 20px;
-            line-height: calc(33/20);
-        }
-
-        &__tab {
-            @media screen and (min-width: 1366px) {
-                display: none;
-            }
-        }
-
-        &__mob {
-            @media screen and (max-width: 767px) {
-                text-align: center;
-            }
-        }
+    &__item:nth-child(3) {
+      color: var(--accent-color);
     }
 
-    &__btn {
-
-        @media screen and (max-width: 767px) {
-                margin-top: 54px;
-                margin-bottom: 67px;
-            }
-
-        @include mq(tab) {
-            margin-top: 45px;
-            margin-bottom: 129px;
-            margin-left: 0;
-        }
-
-        @include mq(desk) {
-            width: 354px;
-            height: 70px;
-            margin-bottom: 242px;
-        }
+    @media screen and (min-width: 768px) and (max-width: 1679px) {
+      margin-top: 15px;
     }
 
-    &__img {
+    &__desk {
+      @media screen and (max-width: 1366px) {
+        display: none;
+      }
 
-        @media screen and (max-width: 767px) {
-            width: 208px;
-            max-width: none;
-            margin: 0 auto;
-        }
-
-        @include mq(tab) {
-            width: 370px;
-            height: 315px;
-            margin-left: 18px;
-            margin-top: -4px;
-
-        }
-
-        @include mq(desk) {
-            width: 842px;
-            height: 718px;
-            margin-top: -55px;
-            margin-left: 50px;
-        }
-
+      font-size: 20px;
+      line-height: calc(33 / 20);
     }
+
+    &__tab {
+      @media screen and (min-width: 1366px) {
+        display: none;
+      }
+    }
+
+    &__mob {
+      @media screen and (max-width: 767px) {
+        text-align: center;
+      }
+    }
+  }
+
+  &__btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @media screen and (max-width: 767px) {
+      margin-top: 54px;
+      margin-bottom: 67px;
+    }
+
+    @include mq(tab) {
+      margin-top: 45px;
+      margin-bottom: 129px;
+      margin-left: 0;
+    }
+
+    @include mq(desk) {
+      width: 354px;
+      height: 70px;
+      margin-bottom: 242px;
+    }
+  }
+
+  &__img {
+    @media screen and (max-width: 767px) {
+      width: 208px;
+      max-width: none;
+      margin: 0 auto;
+    }
+
+    @include mq(tab) {
+      width: 370px;
+      height: 315px;
+      margin-left: 18px;
+      margin-top: -4px;
+    }
+
+    @include mq(desk) {
+      width: 842px;
+      height: 718px;
+      margin-top: -55px;
+      margin-left: 50px;
+    }
+  }
 }
