--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -104,7 +104,11 @@
             </p>
           </li>
         </ul>
-        <a href="" class="about__link link"
+        <a
+          href="https://www.abaenglish.com/en/english-certificates/cambridge/"
+          class="about__link link"
+          target="_blank"
+          rel="noreferrer noopener"
           >Cambrige English Entry Level&nbsp;Certificate</a
         >
       </div>
